--- a/views/partials/articles.ejs
+++ b/views/partials/articles.ejs
@@ -6,7 +6,7 @@
                 <h4><%= datos.cervezas[i].name %></h4>
                 <h4>$ <%= datos.cervezas[i].price %></h4>
                 <button class="pd-seleccionar"><a href="/product/productDetail/<%= datos.cervezas[i].id %>" class="lg-a">Seleccionar</a></button>
-                <button class="pd-add"><a href="/product/productCart" class="lg-a">Agregar al carrito</a></button>
+                <button class="pd-add"><a href="/sales/addShipingCart/<%= datos.cervezas[i].id %>"  class="lg-a">Agregar al carrito</a></button>
                <% if (datos.userLogged && datos.userLogged.userroles_id == 2){ %> 
                 <button class="pd-admin"><a href="/product/productAdmin/<%= datos.cervezas[i].id %>" class="pd-admin-a">Modificar </i></a></button>
                 <% } %>
