feat: CRUD de recetas terminado con update y delete funcionando OK. Cambio nombre editReceta

--- a/views/recetas/nuevaReceta.ejs
+++ b/views/recetas/nuevaReceta.ejs
@@ -12,7 +12,7 @@
         
             <div class="nr-main-containter">
             <h3>Administracion de Recetas</h3>
-            <form action="/recetas/nuevaReceta/" method="POST">
+            <form action="/recetas/nuevareceta" method="POST">
          
             
             <h5><input type="text" name="name"></h5>
