--- a/views/recetas/editRecetas.ejs
+++ b/views/recetas/editRecetas.ejs
@@ -12,7 +12,7 @@
 
             <div class="nr-main-containter">
                 <h3>Administracion de Recetas</h3>
-                <form action="/recetas/recetasAdmin/<%= recetaToEdit.id %>?_method=PUT" method="POST">
+                <form action="/recetas/recetasAdmin/<%=recetaToEdit.id%>?_method=PUT" method="POST">
 
                     <section class="ra-details-container">
 
@@ -196,18 +196,17 @@
                                 </div>
                             </div>
                             <button class="pd-admin" type="submit">Guardar</button>
+                            <button class="pd-admin ra-edit" type="reset"></a>Cancelar cambios</a></button>
                         </div>
 
                     </section>
 
                 </form>
-
-
-                <form action="/recetas/recetasAdmin/<%= recetaToEdit.id %>?_method=DELETE" method="POST">
+                <form action="/recetas/<%=recetaToEdit.id %>?_method=DELETE" method="POST">
                     <div class="ra-buton-container">
                         <button class="pd-admin ra-edit"></a>Eliminar receta</a></button>
                     </div>
-                </form>
+                </form> -->
 
                 <!-- Footer-->
                 <%- include("../partials/footer") %>
