CRUD de Recetas con base de datos funcional. Faltan ajustar el css

--- a/views/recetas/editRecetas.ejs
+++ b/views/recetas/editRecetas.ejs
@@ -8,10 +8,9 @@
         <!-- Header-->
         <%- include("../partials/header") %>
 
-            <!--PÁGINA AÚN NO TRABAJADA-->
 
             <div class="nr-main-containter">
-                <h3>Administracion de Recetas</h3>
+                <h3>Administración de Recetas</h3> <br>
                 <form action="/recetas/recetasAdmin/<%=recetaToEdit.id%>?_method=PUT" method="POST">
 
                     <section class="ra-details-container">
@@ -206,7 +205,7 @@
                     <div class="ra-buton-container">
                         <button class="pd-admin ra-edit"></a>Eliminar receta</a></button>
                     </div>
-                </form> -->
+                </form>
 
                 <!-- Footer-->
                 <%- include("../partials/footer") %>
