--- a/views/recetas/nuevaReceta.ejs
+++ b/views/recetas/nuevaReceta.ejs
@@ -7,11 +7,9 @@
     <body>
         <!-- Header-->
         <%- include("../partials/header") %>
-
-        <!--PÁGINA AÚN NO TRABAJADA-->
         
             <div class="nr-main-containter">
-            <h3>Administracion de Recetas</h3>
+            <h3>Nueva receta</h3>
             <form action="/recetas/nuevareceta" method="POST">
          
             
