--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -17,6 +17,9 @@
 					
 					<button type="submit" class="pd-add " value="Modificar perfil">
 						<a href="/users/profile/<%=user.id%>" > Modificar perfil</a>
+					</button> <br>
+					<button type="submit" class="pd-admin" value="Modificar perfil">
+						<a href="/users/logout" class="pd-admin-a" > Cerrar Sesión</a>
 					</button>
 	</form>
 				</div>
