fix: enlaces de footer. cambio mensaje en guestMW

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,9 +5,9 @@
         </div>
         <ul class="footer-links">
             <li>Enlaces</li>
-            <li><a href="/productPage">Tienda </a></li>
+            <li><a href="/product/productPage">Tienda </a></li>
             <li><a href="/quienesSomos">Quienes somos </a></li>
-            <li><a href="/nuestrasRecetas">Nuestras Recetas </a></li>
+            <li><a href="/recetas/nuestrasRecetas">Nuestras Recetas </a></li>
         </ul>
         <ul class="footer-social-media">
             <li>Contacto</li>
