--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1347,10 +1347,11 @@ section .pd-quienes-somos-right, section .pd-quienes-somos-left {
   border-bottom: 2px solid #ffda4d;
 }
 .nr-main-containter {
-  display: flex;
+  display: block;
   justify-content: space-between;
   flex-wrap: wrap;
   margin: 20px;
+  margin-bottom: 20px;
 }
 .receta-name {
   text-align: left;
@@ -1493,14 +1494,15 @@ div .ra-receta-container {
 .ra-information-attributes li p {
   width: 100px;
   justify-content: left;
-  margin-left: 10px;
   font-size: 13px;
+  margin: 0 5px 0 5px;
 }
 .ra-information-attributes li input, .ra-information .ra-beer-attributes li p input, .ra-name p input {
   border-radius: 3px;
   margin-right: 20px;
   border: 1px solid #c4c4c4;
   padding:2px;
+  width: 30%;
 }
 .ra-tip-container {
   display: flex;
