commit para hacer pull

--- a/views/product/productCart.ejs
+++ b/views/product/productCart.ejs
@@ -14,6 +14,9 @@
                         <div class="pc-product-group">
                             <div class="pc-product-cantidad">
                                
+                                <div class="pd-tienda">
+                                    <%- include("../partials/salesUserId") %>
+                               </div>
 
                                <!-- <div class="pc-quantity">
                                         <div class="pc-counter">
