--- a/views/partials/salesUserId.ejs
+++ b/views/partials/salesUserId.ejs
@@ -1,15 +1,17 @@
 
-<% for (i=0;i< datos.sale.length;i++){%>
+<% for (i=0;i< Products_Detail.length;i++){%>
     <article class="col-12 col-sm-6 col-lg-3 pd-product">
-        <img class="pd-img-product" src="/images/<%= datos.sale[i].image %>" width="360" alt="beer">
+        <img class="pd-img-product" src="/images/<%= Products_Detail[i].image %>" width="360" alt="beer"> 
         <div class="pd-datos-cerveza">
-            <h4><%= datos.sale[i].name %></h4>
-            <h4>$ <%= datos.sale[i].price %></h4>
-            <% if (datos.userLogged && datos.userLogged.userroles_id == 2){ %> 
-            <!--<button class="pd-admin"><a href="/product/productAdmin/<%= datos.cervezas[i].id %>" class="pd-admin-a">Quitar </i></a></button> -->
-            <button class="pd-admin"><a href="" class="pd-admin-a">Quitar </i></a></button>
-            <% } %>
+            <h4><%= Products_Detail[i].name %></h4>
+            <input type="hidden" name="idProductInCart" value="<%= Products_Detail[i].id %>" > 
+            <h4>$ <%= Products_Detail[i].price %></h4>
+           
         </div>
+        <form action='/sales/productCart?_method=DELETE' method="POST" class="" > 
+            <button type="submit" class="pd-admin"><a href="/sales/productCart" class="pd-admin-a">Quitar </i></a></button>
+        </form>
+
     </article>
 
 <%}%>
