--- a/views/recetas/nuevaReceta.ejs
+++ b/views/recetas/nuevaReceta.ejs
@@ -101,7 +101,7 @@
                                             </div>
                                             <h6>Malta adicional: </h6>
                                             <div>
-                                                <p>Tipo de malta:</p><p><input type="text" name="malt3Amount">
+                                                <p>Tipo de malta:</p><p><input type="text" name="malt3">
                                                 <p>Cantidad:</p><input type="text" name="malt3Amount">
                                             </div>
                                             <h6>Malta adicional: </h6>
