--- a/views/recetas/nuestrasRecetas.ejs
+++ b/views/recetas/nuestrasRecetas.ejs
@@ -24,12 +24,12 @@
 
         <div class="nr-main-containter">
             <div class="add-receta-container">
-            <% if (locals.datos && datos.userLogged && datos.userLogged.userroles_id == 2 ){ %>
+            <% if (locals.datos && datos.userLogged && datos.userLogged.users_roles_id == 2 ){ %>
                 <button class="pd-admin"><a href="/recetas/nuevaReceta/">Agregar nueva receta</a></button>
             <%}%>
          </div>
            
-            <% for (let i=1;i< datos.recetas.length;i++){%>
+            <% for (let i=0;i< datos.recetas.length;i++){%>
                 <section class="nr-details-container">
                 <div class="receta-name-container">
                     <h5 class="receta-name">
@@ -37,7 +37,7 @@
                     </h5>
                     <div class="nr-buton-container">
                     <button id="display-hide-btn<%= datos.recetas[i].id %>" onclick="display('<%= datos.recetas[i].id %>');" class="nr-display-btn">Desplegar  <i class="fas fa-chevron-down"></i></button>
-                    <% if (datos.userLogged && datos.userLogged.userroles_id == 2 ){ %>
+                    <% if (datos.userLogged && datos.userLogged.users_roles_id == 2 ){ %>
                         <button class="pd-admin nr-edit"><a href="/recetas/recetasAdmin/<%= datos.recetas[i].id %>" class="pd-admin-a">Modificar receta</a></button>
                     <%}%>
                 </div>
