--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -27,6 +27,7 @@
             <input 
                 type="text" 
                 name="name"
+                id="name"
                 class="rg-input"  <%= locals.errors && errors.name ? 'is-invalid' : null %>
                 value="<%= locals.oldData ? oldData.name : null %>">
                 <% if (locals.errors && errors.name) { %>
@@ -41,6 +42,7 @@
                 <input 
                     type="text"
                     name="lastName" 
+                    id="lastName" 
                     class="rg-input"<%= locals.errors && errors.lastName ? 'is-invalid' : null %>
                     value="<%= locals.oldData ? oldData.lastName : null %>">
                     <% if (locals.errors && errors.lastName) { %>
@@ -55,6 +57,7 @@
             <input 
                 type="text" 
                 name="email" 
+                id="email"
                 class="rg-input" <%= locals.errors && errors.email ? 'is-invalid' : null %>
                 value="<%= locals.oldData ? oldData.email : null %>">
                 <% if (locals.errors && errors.email) { %>
@@ -69,6 +72,7 @@
                <input 
                     type="text" 
                     name="address" 
+                    id="address" 
                     class="rg-input" <%= locals.errors && errors.address ? 'is-invalid' : null %>"
                     value="<%= locals.oldData ? oldData.address : null %>">
                     <% if (locals.errors && errors.address) { %>
@@ -83,6 +87,7 @@
                 <input 
                     type="date"
                     name="birthDate" 
+                    id="birthDate"
                     class="rg-input" <%= locals.errors && errors.birthDate ? 'is-invalid' : null %>"
                     value="<%= locals.oldData ? oldData.birthDate : null %>">
                     <% if (locals.errors && errors.birthDate) { %>
@@ -131,6 +136,7 @@
                     <input 
                         type="file" 
                         name="avatar"
+                        id="avatar"
                         class="rg-input"
                         
                     >
@@ -146,5 +152,6 @@
     </section>
     <!-- Footer-->
     <%- include("../partials/footer") %>
+    <script src="/js/registerFront.js"></script>
 </body>
 </html>
