--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,157 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <%- include('../partials/head') %>
 
     <script>
-        function validar(){
-            if(document.getElementById("password").value == document.getElementById("passVerify").value){
+        function validar() {
+            if (document.getElementById("password").value == document.getElementById("passVerify").value) {
                 document.getElementById("passVerify").style.backgroundColor = 'green'
                 document.getElementById("pwsd-error-msg").innerHTML = ''
-            }else{
+            } else {
                 document.getElementById("passVerify").style.backgroundColor = 'pink'
                 document.getElementById("pwsd-error-msg").innerHTML = 'Error'
             }
         }
     </script>
 
-<body>
-    <!-- Header-->
-    <%- include("../partials/header") %>
-    <section> 
-        <label><h3>REGISTRO NUEVO USUARIO</h3></label>
-        <form action="/users/register" class="rg-form" method="POST" enctype="multipart/form-data">
-            <div>
-            <label><b>Nombre</b></label>
-            <br>
-            <input 
-                type="text" 
-                name="name"
-                id="name"
-                class="rg-input"  <%= locals.errors && errors.name ? 'is-invalid' : null %>
-                value="<%= locals.oldData ? oldData.name : null %>">
-                <% if (locals.errors && errors.name) { %>
-                    <div class="text-danger">
-                        <%= errors.name.msg %> 
+    <body>
+        <!-- Header-->
+        <%- include("../partials/header") %>
+            <section>
+                <label>
+                    <h3>REGISTRO NUEVO USUARIO</h3>
+                </label>
+                <form action="/users/register" class="rg-form" method="POST" enctype="multipart/form-data">
+                    <div>
+                        <label><b>Nombre</b></label>
+                        <br>
+                        <input type="text" name="name" id="name" class="rg-input" <%=locals.errors && errors.name
+                            ? 'is-invalid' : null %>
+                        value="<%= locals.oldData ? oldData.name : null %>">
+                            <% if (locals.errors && errors.name) { %>
+                                <div class="text-danger">
+                                    <%= errors.name.msg %>
+                                </div>
+                                <% } %>
+                                    <div class="text-danger" id="msgFrontName"> </div>
                     </div>
-                <% } %>
-            </div>
-            <div>
-                <label><b>Apellido</b></label>
-                <br>
-                <input 
-                    type="text"
-                    name="lastName" 
-                    id="lastName" 
-                    class="rg-input"<%= locals.errors && errors.lastName ? 'is-invalid' : null %>
-                    value="<%= locals.oldData ? oldData.lastName : null %>">
-                    <% if (locals.errors && errors.lastName) { %>
-                        <div class="text-danger">
-                            <%= errors.lastName.msg %> 
-                        </div>
-                    <% } %>
-            </div>
-           <div>
-            <label><b>Email</b></label>
-            <br>
-            <input 
-                type="text" 
-                name="email" 
-                id="email"
-                class="rg-input" <%= locals.errors && errors.email ? 'is-invalid' : null %>
-                value="<%= locals.oldData ? oldData.email : null %>">
-                <% if (locals.errors && errors.email) { %>
-                    <div class="text-danger">
-                        <%= errors.email.msg %> 
+                    <div>
+                        <label><b>Apellido</b></label>
+                        <br>
+                        <input type="text" name="lastName" id="lastName" class="rg-input" <%=locals.errors &&
+                            errors.lastName ? 'is-invalid' : null %>
+                        value="<%= locals.oldData ? oldData.lastName : null %>">
+                            <% if (locals.errors && errors.lastName) { %>
+                                <div class="text-danger">
+                                    <%= errors.lastName.msg %>
+                                </div>
+                                <% } %>
+                                <div class="text-danger" id="msgFrontLastName"> </div>
                     </div>
-                <% } %>
-           </div>
-           <div>
-            <label><b>Dirección</b></label>
-            <br>
-               <input 
-                    type="text" 
-                    name="address" 
-                    id="address" 
-                    class="rg-input" <%= locals.errors && errors.address ? 'is-invalid' : null %>"
-                    value="<%= locals.oldData ? oldData.address : null %>">
-                    <% if (locals.errors && errors.address) { %>
-                        <div class="text-danger">
-                            <%= errors.address.msg %> 
-                        </div>
-                    <% } %>
-            </div>
-            <div>
-                <label><b>Fecha de nacimiento</b></label>
-                <br>
-                <input 
-                    type="date"
-                    name="birthDate" 
-                    id="birthDate"
-                    class="rg-input" <%= locals.errors && errors.birthDate ? 'is-invalid' : null %>"
-                    value="<%= locals.oldData ? oldData.birthDate : null %>">
-                    <% if (locals.errors && errors.birthDate) { %>
-                        <div class="text-danger">
-                            <%= errors.birthDate.msg %> 
-                        </div>
-                    <% } %>
-            </div>
-            <div>
-                <label><b>Contraseña</b></label>
-                <br>
-                <input 
-                    type="password" 
-                    id="password"
-                    name="password" 
-                    class="rg-input"<%= locals.errors && errors.password ? 'is-invalid' : null %>"
-                    value="<%= locals.oldData ? oldData.password : null %>">
-                    <% if (locals.errors && errors.password) { %>
-                        <div class="text-danger">
-                            <%= errors.password.msg %> 
-                        </div>
-                    <% } %>
-            </div>
-            <div>
-                <label><b>Confirmá tu contraseña</b></label>
-                <br>
-                <input 
-                    type="password" 
-                    class="rg-input"
-                    name="passVerify" 
-                    id="passVerify" 
-                    required onkeyup="validar()">
-                <% if (locals.errors && errors.passVerify) { %>
-                    <div class="text-danger">
-                        <%= errors.passVerify.msg %> 
+                    <div>
+                        <label><b>Email</b></label>
+                        <br>
+                        <input type="text" name="email" id="email" class="rg-input" <%=locals.errors && errors.email
+                            ? 'is-invalid' : null %>
+                        value="<%= locals.oldData ? oldData.email : null %>">
+                            <% if (locals.errors && errors.email) { %>
+                                <div class="text-danger">
+                                    <%= errors.email.msg %>
+                                </div>
+                                <% } %>
                     </div>
-                <% } %>
+                    <div>
+                        <label><b>Dirección (para envíos)</b></label>
+                        <br>
+                        <input type="text" name="address" id="address" class="rg-input" <%=locals.errors &&
+                            errors.address ? 'is-invalid' : null %>"
+                        value="<%= locals.oldData ? oldData.address : null %>">
+                            <% if (locals.errors && errors.address) { %>
+                                <div class="text-danger">
+                                    <%= errors.address.msg %>
+                                </div>
+                                <% } %>
+                                    <div class="text-danger" id="msgFrontAddress"> </div>
+                    </div>
+                    <div>
+                        <label><b>Fecha de nacimiento</b></label>
+                        <br>
+                        <input type="date" name="birthDate" id="birthDate" class="rg-input" <%=locals.errors &&
+                            errors.birthDate ? 'is-invalid' : null %>"
+                        value="<%= locals.oldData ? oldData.birthDate : null %>">
+                            <% if (locals.errors && errors.birthDate) { %>
+                                <div class="text-danger">
+                                    <%= errors.birthDate.msg %>
+                                </div>
+                                <% } %>
+                    </div>
+                    <div>
+                        <label><b>Contraseña</b></label>
+                        <br>
+                        <input type="password" id="password" name="password" class="rg-input" <%=locals.errors &&
+                            errors.password ? 'is-invalid' : null %>"
+                        value="<%= locals.oldData ? oldData.password : null %>">                        
+                            <% if (locals.errors && errors.password) { %>
+                                <div class="text-danger">
+                                    <%= errors.password.msg %>
+                                </div>
+                                <% } %>
+                        <div class="text-danger" id="msgFrontPassword"> </div>
+                    </div>
+                    <div>
+                        <label><b>Confirmá tu contraseña</b></label>
+                        <br>
+                        <input type="password" class="rg-input" name="passVerify" id="passVerify" required
+                            onkeyup="validar()">
+                        <% if (locals.errors && errors.passVerify) { %>
+                            <div class="text-danger">
+                                <%= errors.passVerify.msg %>
+                            </div>
+                            <% } %>
 
-            </div>
-           
-                                 
-            <div>
-                <div >
-                    <label><b>Imagen de perfil:</b></label>
-                    <br>
-                    <input 
-                        type="file" 
-                        name="avatar"
-                        id="avatar"
-                        class="rg-input"
-                        
-                    >
-                </div>
-            </div>
-        
-            <div class="rg-btn-div rg-input" >
-                <input type="submit" name="" id="rg-submit" class="rg-submit">
-                <input type="reset" class="rg-reset">
-            </div>
-            
-        </form>       
-    </section>
-    <!-- Footer-->
-    <%- include("../partials/footer") %>
-    <script src="/js/registerFront.js"></script>
-</body>
+                    </div>
+
+
+                    <div>
+                        <div>
+                            <label><b>Imagen de perfil:</b></label>
+                            <br>
+                            <input type="file" name="avatar" id="avatar" class="rg-input">
+                        </div>
+                    </div>
+
+                    <div class="rg-btn-div rg-input">
+                        <input type="submit" name="" id="rg-submit" class="rg-submit">
+                        <input type="reset" class="rg-reset">
+                    </div>
+
+                </form>
+            </section>
+            <!-- Footer-->
+            <%- include("../partials/footer") %>
+                <script src="/js/registerFront.js"></script>
+    </body>
+
 </html>
