--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,9 @@
             <li>
                 <div class="pd-pc-links">
                     <a href="/product/productPage" class="tienda-botton">Tienda</a>
-                    <a href="/enDesarrollo"><i class="fas fa-shopping-cart"></i></a>
+                    <a href="/sales/productCart"><i class="fas fa-shopping-cart"></i></a> 
+                    <!-- <a href="/enDesarrollo"><i class="fas fa-shopping-cart"></i></a> -->
+                    
                 </div>
             </li>
             <li>
