--- a/views/partials/articles.ejs
+++ b/views/partials/articles.ejs
@@ -8,7 +8,7 @@
                 <h4>$ <%= datos.cervezas[i].price %></h4>
                 <input type="hidden" value="<%= datos.cervezas[i].id %>" name="IdProductToCart">
                 <button class="pd-seleccionar"><a href="/product/productDetail/<%= datos.cervezas[i].id %>" class="lg-a">Seleccionar</a></button>
-                <button class="pd-add"><a href="/sales/productCart"  class="lg-a">Agregar al carrito</a></button>
+                <button class="pd-add"><a href="/sales/addShipingCart/<%= datos.cervezas[i].id %>"  class="lg-a">Agregar al carrito</a></button>
                <% if (datos.userLogged && datos.userLogged.users_roles_id == 2){ %> 
                 <button class="pd-admin"><a href="/product/productAdmin/<%= datos.cervezas[i].id %>" class="pd-admin-a">Modificar </i></a></button>
                 <% } %>
