feat: validacion OK de email en FormRegister

--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -67,6 +67,7 @@
                         <%= errors.email.msg %> 
                     </div>
                 <% } %>
+                <div class="text-danger" id="msgFront_email"> </div>
            </div>
            <div>
             <label><b>Dirección</b></label>
