--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -433,7 +433,10 @@ max-width: 500px;
 
 
 /*Pagina Register*/
+.is-invalid {
+  border: 1px red solid;
 
+}
 .text-danger {
   color: #dc3545 !important;
   font-size: 12px;
