--- a/views/product/productCreate.ejs
+++ b/views/product/productCreate.ejs
@@ -13,43 +13,51 @@
         <div class="pd-product-info">
             
                 <div class="pc-ResumenCompra">
-                    <h3>Administracion de Producto</h3>
-                    <form action="/product/productAdmin/" method="POST" enctype="multipart/form-data">
+                    <h3 id="title">Creación de Producto</h3>
+                    <form action="/product/productAdmin/" method="POST" id="form" enctype="multipart/form-data">
                     <div class="pd-product-imgs">
                         <img src="" alt="beer">
                     </div>
                         <ul class="lg-form-login rg-form" >
                             <li class='pa-li-element'>
                                 <h5>Nombre</h5>
-                                <p><input type="text" name="name"  class='rg-input'></p>
+                                <div class="text-danger" id="msgFront_name"> </div>
+                                <p><input type="text" name="name" id="name"  class='rg-input'></p>
                             </li>
                             <li class='pa-li-element'>
                                 <h5>Descripción</h5>
-                                <p><input type="text" name="description" value="" class='rg-input'></p>
+                                <div class="text-danger" id="msgFront_description"> </div>
+                                <p><input type="text" name="description" id="description" value="" class='rg-input'></p>
                             </li>
                             <li class='pa-li-element'>
                                 <h5>Amargor </h5>
-                                <p><input type="text" name="bitterness" value="" class='rg-input'></p>
+                                <div class="text-danger" id="msgFront_bitterness"> </div>
+                                <p><input type="text" name="bitterness" id="bitterness" value="" class='rg-input'></p>
                             </li>                  
                             <li class='pa-li-element'>
                                 <h5>Alcohol </h5>
-                                <p><input type="text" name="alcohol" value="" class='rg-input'></p>
+                                <div class="text-danger" id="msgFront_alcohol"> </div>
+                                <p><input type="text" name="alcohol" id="alcohol" value="" class='rg-input'></p>
                             </li>
                             <li class='pa-li-element'>
                                 <h5>Color </h5>
-                                <p><input type="text" name="color" value="" class='rg-input'></p>
+                                <div class="text-danger" id="msgFront_color"> </div>
+                                <p><input type="text" name="color" id="color" value="" class='rg-input'></p>
                             </li>
                             <li class='pa-li-element'>
                                 <h5>Lúpulo/s </h5>
-                                <p><input type="text" name="hop" value="" class='rg-input'></p>
+                                <div class="text-danger" id="msgFront_hop"> </div>
+                                <p><input type="text" name="hop" id="hop" value="" class='rg-input'></p>
                             </li>
                             <li class='pa-li-element'>
                                 <h5>Gasificación </h5>
-                                <p><input type="text" name="carbonation" value=""class='rg-input' ></p>
+                                <div class="text-danger" id="msgFront_carbonation"> </div>
+                                <p><input type="text" name="carbonation" id="carbonation" value=""class='rg-input' ></p>
                             </li>
                             <li class='pa-li-element'>
                                 <h5>Precio </h5>
-                                <p><input type="text" name="price" value=""class='rg-input' ></p>
+                                <div class="text-danger" id="msgFront_price"> </div>
+                                <p><input type="text" name="price" id="price" value=""class='rg-input' ></p>
                             </li>
                             <li class='pa-li-element'>
                                 <h5>Categoría </h5> 
@@ -62,14 +70,11 @@
                                         </option>
                                         <% } %>
                             </select>
-                            </li>
-        
-                        </ul>
-        
+                            </li>        
+                        </ul>        
                         <input type="file" name="product-image" class='rg-input'>
-                        <input type="text" name="image" style="opacity: 0;" value="" class='rg-input'>
-
-                
+                        <input type="text" name="image" id="productImage" style="opacity: 0;" value="" class='rg-input'>
+                        <div class="text-danger" id="msgFront_image"> </div>                
                     <div class="pd-options rg-input">
                         <input type="submit" class="lg-submit" value="Guardar">
                         <input type="reset" class="lg-submit" name="limpiar" value="Limpiar">
@@ -81,6 +86,7 @@
     </div>
     <!-- Footer-->
     <%- include("../partials/footer") %>
+    <script src="/Js/productFront.js"></script>
 </body>
 
 </html>
