--- a/views/sales/productCart.ejs
+++ b/views/sales/productCart.ejs
@@ -132,15 +132,15 @@
         const a = []
         
         //const inputs = document.querySelectorAll("#formRegister input");
-        const inputs = document.querySelectorAll("#formProductCart input");
+        //const inputs = document.querySelectorAll("#formProductCart input");
         
-        inputs.forEach((input) => {
+        //inputs.forEach((input) => {
        
-        input.addEventListener("keyup", validarFormulario);
-        input.addEventListener("blur", validarFormulario);
-        input.addEventListener("change", valExtFile);
+        //input.addEventListener("keyup", validarFormulario);
+        //input.addEventListener("blur", validarFormulario);
+        //input.addEventListener("change", valExtFile);
 
-  });
+  //});
 
         function calculate(id){  
 
