--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -147,6 +147,7 @@
                 <input type="reset" class="rg-reset">
             </div>
             
+            <div class="text-danger" id="msgFront_submit"> </div>
         </form>       
     </section>
     <!-- Footer-->
