--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -28,16 +28,18 @@
             <form action="/users/login" method="POST" class="lg-form-login rg-form">
                 <div>
                     <label>Email</label>
-                    <input type="email" name="email" class="lg-input">
-                    <% if (locals.errors && errors.email) { %>
-                        <div class="text-danger">
-                            <%= errors.email.msg %>
-                        </div>
-                    <% } %>
+                    <input type="email" name="email" id="email" class="lg-input">                    
+                    <div class="text-danger" id="msgFront_email">
+                            <% if (locals.errors && errors.email) { %>
+                                <%= errors.email.msg %>
+                            <% } %>
+                    </div>
                 </div>
                 <div>
                     <label>Constraseña</label>
-                    <input type="password" name="password" class="lg-input">
+                    <input type="password" name="password" id="password" class="lg-input">
+                    <div class="text-danger" id="msgFront_password">
+                </div>
                 </div>
                 <div>
                     <label>
@@ -60,6 +62,6 @@
     <!-- Footer-->
     <div style="margin-top:175px"> </div>
     <%- include("../partials/footer") %>
-
+    <script src="/Js/loginFront.js"></script>
 </body>
 </html>
